--- a/spec/dummy/app/views/pages/index_other.html.erb
+++ b/spec/dummy/app/views/pages/index_other.html.erb
@@ -1,9 +1,18 @@
 <%= Cloudinary::Utils.sign_request(Cloudinary::Uploader.build_upload_params({}), {}) %>
 
+<ul>
+  <%- @page.children.each do |page| %>
+    <li><%= link_to page.title, page.path %></li>
+  <%- end %>
+</ul>
+
 <div style='margin:40px;'>
   <h1>
-<%= editable @page, :title do %>
+<%= editable @page, :title_b do %>
   Hello
+<%- end %>
+<%= ts_new :page, parent: @page, content_tag: :span do %>
+  <small>New page</small>
 <%- end %>
 </h1>
 
@@ -51,6 +60,18 @@
   <%= ts_image_tag(image.identifier || 'http://lorempixel.com/400/200/', width: 200, height: 200, class: 'test', crop: :fill) %>
   <%= ts_image_tag(image.identifier || 'http://lorempixel.com/400/200/', width: 500, height: 200, class: 'test', crop: :fill) %>
   <%= ts_image_tag(image.identifier || 'http://lorempixel.com/400/200/', width: 100, height: 200, class: 'test', crop: :fit) %>
+
+
+  <%= editable @page, :image_body, type: :html do %>
+    <h4>Test</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <%- end %>
+
 <%- end %>
 
 <%= editable @page, :file, type: :file do |file| %>
