added app helper tests

--- a/spec/dummy/app/views/pages/index_other.html.erb
+++ b/spec/dummy/app/views/pages/index_other.html.erb
@@ -1,4 +1,6 @@
 <%= Cloudinary::Utils.sign_request(Cloudinary::Uploader.build_upload_params({}), {}) %>
+<%= testing_helper %>
+<%= testing_again %>
 
 <ul>
   <%- @page.children.each do |page| %>
