--- a/app/assets/stylesheets/type_station/admin_bar.css.scss
+++ b/app/assets/stylesheets/type_station/admin_bar.css.scss
@@ -1,36 +1,43 @@
-body {
-  padding-bottom: 50px;
-}
+$admin-bar-height: 3.5em;
+$admin-bar-icon-size: 2.5em;
 
+.ts-edit-mode { padding-bottom: $admin-bar-height; }
 
 #ts-admin-bar-edit {
   position: fixed;
-  left: 5px;
-  bottom: 5px;
-  width: 100px;
+  z-index: 1000;
+  left: 0px;
+  bottom: 0px;
+  width: $admin-bar-height;
+  height: $admin-bar-height;
   button {
     line-height: 1.5em;
-    padding: 0px 10px;
+    padding: 0px;
+    width: 100%;
+    height: 100%;
     i {
-      font-size: 2em;
+      font-size: 3em;
     }
   }
 }
 
 #ts-admin-bar {
+  //height: $admin-bar-height;
   position: fixed;
+  z-index: 1000;
   background: #fff;
-  border-top: 3px solid #ccc;
-  bottom: 0px;
+  bottom: -115px;
   left: 0px;
   right: 0px;
   padding: 0px;
   margin: 0px;
   font-family: Tahoma, Geneva, sans-serif;
-
+  transition: bottom .5s;
+  &.insert-open { bottom: 0px; }
   ul { 
     display: table;
     width: 100%;
+    height: $admin-bar-height;
     padding: 0px;
     margin: 0px;
     padding: 0px;
@@ -41,10 +48,13 @@ body {
       vertical-align: middle;
 
       &.ts-brand {
-        background: #57ad68;
+        background: rgba(27,33,36,0.67);
         color: #fff;
         text-align: center;
         text-transform: uppercase;
+        cursor: pointer;
+        font-size: 2.5em;
+        .smaller { font-size: 0.5em; margin-left: -10px; }
       }
 
       &.ts-title {
@@ -70,7 +80,7 @@ body {
           width: 30%;
           line-height: 1.5em;
           i {
-            font-size: 2em;
+            font-size: $admin-bar-icon-size;
           }
         }
 
@@ -81,4 +91,79 @@ body {
     }
 
   } 
+}
+
+#insert-content {
+  background: rgba(27, 33, 36, 0.67);
+  height: 115px;
+  ul li.insert-new { 
+    cursor: pointer; 
+    margin: 5px 0 0 5px;
+    width: 1.5em;
+    display: inline-block;
+    text-align: center;
+    font-size: 3.8em;
+    transition: color .5s, background-color .5s;
+    .insert-icon {
+      background-color: rgba(255,255,255,0.2);
+      color: #555;
+      width: 1.5em;
+      height: 1.5em;
+      font-size: 1em;
+    }
+    .insert-name {
+      height: 1em;
+      margin-top: 8px;
+      overflow: hidden;
+      font-size: 0.25em;
+      line-height: 1em;
+      color: #fff;
+      text-align: left;
+    }
+    &:hover { 
+      .insert-icon { background-color: #428bca; color: #fff; }
+    }
+  }
+}
+
+
+#ts-admin-bar-options {
+  ul:after, li:after { clear: both; display: table; content: ''; }
+  li { padding: 5px 10px; }
+  span.icon {
+    display: block;
+    float: left;
+    width: 1.1em;
+    height: 1.1em;
+    font-size: 1.8em;
+    padding: 2px;
+    text-align: center;
+    color: #aaa;
+    transition: color 0.5s;
+  }
+  span.text {
+    display: block;
+    float: left;
+    width: 195px;
+    padding: 2px 0 0 10px;
+    .large-text {
+      font-size: 14px;
+      font-weight: bold;
+      line-height: 16px;
+      color: #333;
+    }
+    .sub-text {
+      max-width: 195px;
+      font-size: 12px;
+      line-height: 16px;
+      color: #777;
+    }
+  }
+  li a:hover {
+    span.icon { color: #555; }
+    span.text {
+      .large-text { color: #000; }
+      .sub-text { color: #444; }
+    }
+  }
 }
