--- a/app/assets/stylesheets/type_station/admin_bar.css.scss
+++ b/app/assets/stylesheets/type_station/admin_bar.css.scss
@@ -1,5 +1,5 @@
 $admin-bar-height: 3.5em;
-$admin-bar-icon-size: 2.5em;
+$admin-bar-icon-size: 26.5pt;
 
 .ts-edit-mode { padding-bottom: $admin-bar-height; }
 
@@ -16,7 +16,7 @@ $admin-bar-icon-size: 2.5em;
     width: 100%;
     height: 100%;
     i {
-      font-size: 3em;
+      font-size: 31.5pt; // 3em;
     }
   }
 }
@@ -53,7 +53,7 @@ $admin-bar-icon-size: 2.5em;
         text-align: center;
         text-transform: uppercase;
         cursor: pointer;
-        font-size: 2.5em;
+        font-size: $admin-bar-icon-size;
         .smaller { font-size: 0.5em; margin-left: -10px; }
       }
 
@@ -102,7 +102,7 @@ $admin-bar-icon-size: 2.5em;
     width: 1.5em;
     display: inline-block;
     text-align: center;
-    font-size: 3.8em;
+    font-size: 40pt;
     transition: color .5s, background-color .5s;
     .insert-icon {
       background-color: rgba(255,255,255,0.2);
@@ -112,11 +112,11 @@ $admin-bar-icon-size: 2.5em;
       font-size: 1em;
     }
     .insert-name {
-      height: 1em;
       margin-top: 8px;
       overflow: hidden;
-      font-size: 0.25em;
+      font-size: 10pt;
       line-height: 1em;
+      height: 1em;
       color: #fff;
       text-align: left;
     }
@@ -128,17 +128,19 @@ $admin-bar-icon-size: 2.5em;
 
 
 #ts-admin-bar-options {
+  font-family: Tahoma, Geneva, sans-serif;
   ul:after, li:after { clear: both; display: table; content: ''; }
-  li { padding: 5px 10px; }
+  ul { padding: 0; margin: 0; }
+  li { padding: 5px 10px; display: block; }
   span.icon {
     display: block;
     float: left;
     width: 1.1em;
     height: 1.1em;
-    font-size: 1.8em;
+    font-size: 24pt;
     padding: 2px;
     text-align: center;
-    color: #aaa;
+    color: #bbb;
     transition: color 0.5s;
   }
   span.text {
@@ -150,19 +152,19 @@ $admin-bar-icon-size: 2.5em;
       font-size: 14px;
       font-weight: bold;
       line-height: 16px;
-      color: #333;
+      color: #555;
     }
     .sub-text {
       max-width: 195px;
       font-size: 12px;
       line-height: 16px;
-      color: #777;
+      color: #888;
     }
   }
   li a:hover {
     span.icon { color: #555; }
     span.text {
-      .large-text { color: #000; }
+      .large-text { color: #111; }
       .sub-text { color: #444; }
     }
   }
