--- a/spec/dummy/app/views/pages/index_other.html.erb
+++ b/spec/dummy/app/views/pages/index_other.html.erb
@@ -10,16 +10,16 @@
 
 <div style='margin:40px;'>
   <h1>
-<%= editable @page, :title_b do %>
+<%= ts_editable @page, :title_b do %>
   Hello
 <%- end %>
-<%= ts_new :page, parent: @page, content_tag: :span do %>
+<%= ts_new :page, @page, content_tag: :span do %>
   <small>New page</small>
 <%- end %>
 </h1>
 
 <h1>
-<%= editable @page, :title_c do %>
+<%= ts_editable @page, :title_c do %>
   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -30,7 +30,7 @@
 </h1>
 
 
-<%= editable @page, :body, type: :html do %>
+<%= ts_editable @page, :body, type: :html do %>
   <h4>Test</h4>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -41,7 +41,7 @@
 <%- end %>
 
 
-<%= editable @page, :body_two, type: :html do %>
+<%= ts_editable @page, :body_two, type: :html do %>
   <h4>Test</h4>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -52,7 +52,7 @@
 <%- end %>
 
 
-<%= editable @page, :image_one, type: :image do |image| %>
+<%= ts_editable @page, :image_one, type: :image do |image| %>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -64,7 +64,7 @@
   <%= ts_image_tag(image.identifier || 'http://lorempixel.com/400/200/', width: 100, height: 200, class: 'test', crop: :fit) %>
 
 
-  <%= editable @page, :image_body, type: :html do %>
+  <%= ts_editable @page, :image_body, type: :html do %>
     <h4>Test</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -76,7 +76,39 @@
 
 <%- end %>
 
-<%= editable @page, :file, type: :file do |file| %>
+
+<%= ts_collection @page, :image_one do || %>
+  
+  <li><%= ts_image_tag(image.identifier || 'http://lorempixel.com/400/200/', width: 200, height: 200, class: 'test', crop: :fill) %></li>
+
+
+  <%= ts_editable @page, :title_c do %>
+
+  <%- end %>
+<%- end %>
+
+
+<ul>
+  <%= ts_new :collection, :gallery_name, content_tag: :li do %>
+    + Add
+  <% end %>
+  <%= ts_collection @page, :gallery_name, content_tag: :li do %>
+    <div class="image">
+      <%= ts_editable @page, :image, type: :image do |image| %>
+        <%= ts_image_tag(image.identifier, width: 200, height: 200, class: 'test', crop: :fill) %>
+      <% end %>
+    </div>
+    <div class="caption">
+      <%= ts_editable @page, :caption do %>
+        Default Caption
+      <% end %>
+    </div>
+  <% end %>
+</ul>
+
+
+
+<%= ts_editable @page, :file, type: :file do |file| %>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -154,7 +186,7 @@
 <br/>
 
 <h1>
-<%= editable @page, :title_b do %>
+<%= ts_editable @page, :title_b do %>
   Hello
 <%- end %>
 </h1>
