added named pages

--- a/spec/dummy/app/views/pages/index_other.html.erb
+++ b/spec/dummy/app/views/pages/index_other.html.erb
@@ -2,6 +2,8 @@
 <%= testing_helper %>
 <%= testing_again %>
 
+<%= ts_page(:team) %>
+
 <ul>
   <%- @page.children.each do |page| %>
     <li><%= link_to page.title, page.path %></li>
