--- a/app/views/type_station/toolbars/_admin_bar.html.haml
+++ b/app/views/type_station/toolbars/_admin_bar.html.haml
@@ -50,6 +50,11 @@
           %i.ion-android-clipboard
         .insert-name
           Form
+      %li.insert-new
+        .insert-icon
+          %i.ion-gear-a
+        .insert-name
+          Custom
 
 
 #ts-admin-bar-options
