--- a/app/assets/stylesheets/type_station/application.css
+++ b/app/assets/stylesheets/type_station/application.css
@@ -12,6 +12,7 @@
  *
  *= require medium-editor/medium-editor
  *= require medium-editor/themes/bootstrap
+ *= require jquery.textcomplete
  *= require drop-theme-arrows-bounce-dark
  *= require vex
  *= require vex-theme-os
