updated dummy app views

--- a/spec/dummy/app/views/pages/index_other.html.erb
+++ b/spec/dummy/app/views/pages/index_other.html.erb
@@ -211,4 +211,4 @@
 <%- end %>
 </h1>
 
-<%= type_station_admin_toolbar(@page) %>
+<%= ts_admin_toolbar(@page, templates: {index_other: 'Main', blank_index: 'Blank'}) %>
