--- a/app/assets/stylesheets/type_station/admin_bar.css.scss
+++ b/app/assets/stylesheets/type_station/admin_bar.css.scss
@@ -33,6 +33,8 @@ $admin-bar-icon-size: 26.5pt;
   margin: 0px;
   font-family: Tahoma, Geneva, sans-serif;
   transition: bottom .5s;
+  box-shadow: 0px 0px 20px rgba(0,0,0,0.4);
+  border-top: 1px solid #ccc;
   &.insert-open { bottom: 0px; }
   ul { 
     display: table;
