--- a/app/assets/stylesheets/type_station/base.css.scss
+++ b/app/assets/stylesheets/type_station/base.css.scss
@@ -26,6 +26,7 @@ $secondary-border-color: #357ebd;
   font-family: Tahoma, Geneva, sans-serif;
   -webkit-transition: background 0.5s;
   transition: background 0.5s;
+  &:hover { background: darken(#eee, 8%); }
 }
 
 .ts-button-primary {
@@ -61,6 +62,7 @@ $secondary-border-color: #357ebd;
   text-align: center;
   cursor: pointer;
   i { vertical-align: middle; }
+  &:hover { background: rgba(27,33,36,0.87); }
 }
 
 body.ts-edit-mode {
