fixed issue with auto open editor on reload

--- a/app/views/type_station/toolbars/_admin_bar.html.haml
+++ b/app/views/type_station/toolbars/_admin_bar.html.haml
@@ -60,7 +60,7 @@
 #ts-admin-bar-options
   %ul
     -#%li
-      = link_to "#" do
+      = link_to "#!ts-edit-enable" do
         %span.icon
           %i.ion-ios-paper-outline
         %span.text
@@ -69,7 +69,7 @@
           .sub-text
             Create a new root page
     -#%li
-      = link_to "#" do
+      = link_to "#!ts-edit-enable" do
         %span.icon
           %i.ion-ios-photos-outline
         %span.text
@@ -78,7 +78,7 @@
           .sub-text
             Create a new sub page
     -#%li
-      = link_to "#" do
+      = link_to "#!ts-edit-enable" do
         %span.icon
           %i.ion-ios-trash-outline
         %span.text
@@ -87,7 +87,7 @@
           .sub-text
             Permantely delete this page
     -#%li
-      = link_to "#" do
+      = link_to "#!ts-edit-enable" do
         %span.icon
           %i.ion-ios-shuffle
         %span.text
@@ -96,7 +96,7 @@
           .sub-text
             Reorder the site's pages
     %li#ts-page-settings
-      = link_to "#" do
+      = link_to "#!ts-edit-enable" do
         %span.icon
           %i.ion-ios-settings
         %span.text
