hide options div from page

--- a/app/assets/stylesheets/type_station/admin_bar.css.scss
+++ b/app/assets/stylesheets/type_station/admin_bar.css.scss
@@ -129,6 +129,10 @@ $admin-bar-icon-size: 26.5pt;
   }
 }
 
+#ts-admin-bar-settings {
+  display: none;
+}
+
 
 #ts-admin-bar-options {
   font-family: Tahoma, Geneva, sans-serif;
