--- a/app/assets/stylesheets/type_station/base.css.scss
+++ b/app/assets/stylesheets/type_station/base.css.scss
@@ -67,6 +67,13 @@ $secondary-border-color: #357ebd;
 
 .ts-edit-page-button {
 top: 0px;
+right: 40px;
+bottom: auto;
+left: auto;
+}
+
+.ts-delete-page-button {
+top: 0px;
 right: 0px;
 bottom: auto;
 left: auto;
@@ -74,14 +81,14 @@ left: auto;
 
 .ts-move-up-button {
 top: 0px;
-right: 81px;
+right: 120px;
 bottom: auto;
 left: auto;
 }
 
 .ts-move-down-button {
 top: 0px;
-right: 40px;
+right: 80px;
 bottom: auto;
 left: auto;
 }
