--- a/app/assets/stylesheets/type_station/application.css
+++ b/app/assets/stylesheets/type_station/application.css
@@ -13,6 +13,7 @@
  *= require medium-editor/medium-editor
  *= require medium-editor/themes/bootstrap
  *= require jquery.textcomplete
+ *= require chosen
  *= require drop-theme-arrows-bounce-dark
  *= require vex
  *= require vex-theme-os
