--- a/app/assets/stylesheets/type_station/base.css.scss
+++ b/app/assets/stylesheets/type_station/base.css.scss
@@ -127,6 +127,54 @@ body.ts-edit-mode {
   font-size: inherit;
   min-height: 2.5em;
   margin: 0 0 0.25em;
+  &:focus {
+    box-shadow: inset 0 0 0 1px #3288e6;
+    outline: none;
+  }
+}
+
+.vex-custom-input-wrapper .chosen-choices {
+ -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  background: white;
+  width: 100%;
+  height: 40px;
+  padding: 0.25em 0.67em;
+  border: 0;
+  font-family: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  min-height: 2.5em;
+  margin: 0 0 0.25em; 
+  box-shadow: none;
+
+  .search-choice {
+    font-size: 1.2em;
+    line-height: 19px !important;
+    height: 28px;
+
+    .search-choice-close {
+      top: 7px !important;
+    }
+  }
+}
+
+.vex-custom-input-wrapper .chosen-drop {
+  border-top: 1px solid #999;
+
+  .highlighted {
+    color: #fff !important;
+  }
+}
+
+.vex-custom-input-wrapper .chosen-container-active .chosen-choices {
+  box-shadow: inset 0 0 0 1px #3288e6;
+  .search-field input {
+    box-shadow: none !important;
+  }
 }
 
 
