--- a/app/views/type_station/toolbars/_admin_bar.html.haml
+++ b/app/views/type_station/toolbars/_admin_bar.html.haml
@@ -106,6 +106,11 @@
             Manage page settings
 
 #ts-admin-bar-settings{data: {ts_url: model.edit_url}}
+  .vex-custom-field-wrapper
+    %label{for: "type"} Template
+    .vex-custom-input-wrapper
+      = select_tag "type", options_for_select({hidden: 'Hidden', draft: 'Draft', published: 'Published'}.map {|(k,v)| [v,k.to_s]}, model.try(:type).to_s)
+
   - if options[:show_name].present?
     .vex-custom-field-wrapper
       %label{for: "name"} Name
