--- a/app/assets/stylesheets/type_station/base.css.scss
+++ b/app/assets/stylesheets/type_station/base.css.scss
@@ -45,7 +45,7 @@ $secondary-border-color: #357ebd;
   z-index: 100000;
 }
 
-.ts-editable-image, .ts-editable-file, .ts-edit-page { position: relative;}
+.ts-editable-image, .ts-editable-file, .ts-edit-page, .ts-edit-link { position: relative;}
 .ts-editable-button {
   position: absolute;
   bottom:0px;
@@ -189,10 +189,10 @@ body.ts-edit-mode {
   display: none;
 }
 
-.ts-file-style {
+.ts-file-style, .ts-save-url {
   font-family: Tahoma, Geneva, sans-serif;
   font-size: 11pt;
-  border-radius: 4px;
+  border-radius: 3px;
   border: 1px solid $secondary-border-color;
   background-color: $secondary-color;
   color: $primary-color;
@@ -211,6 +211,42 @@ body.ts-edit-mode {
     margin-right: 15px;
   }
   &:hover { background-color: $secondary-border-color; }
+}
+.ts-save-url { 
+  padding: 0.75em 2em;
+  margin: 8px 0px 0px; 
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  font-family: inherit;
+  float: right;
+}
+.ts-edit-link-input {
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  background: white;
+  width:100%;
+  padding: 0.25em 0.67em;
+  border: 1px solid #ccc;
+  font-family: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  min-height: 2.5em;
+  margin: 0 0 0.25em;
+}
+
+.ts-edit-link-container {
+  padding: 8px 20px;
+  font-family: "Helvetica Neue", sans-serif;
+  color: #444;
+  label { color: inherit; display: block; }
+  &:after { clear: both; content: ''; display: table; }
+  .ts-edit-link-title {
+    margin:0 0 10px;
+    color: inherit;
+  }
 }
 
 .ts-moveable .ts-move {
