--- a/spec/dummy/app/views/pages/index_other.html.erb
+++ b/spec/dummy/app/views/pages/index_other.html.erb
@@ -5,7 +5,7 @@
 <%= ts_page(:team) %>
 
 <ul>
-  <%- @page.children.each do |page| %>
+  <%- @page.children(order_by: {position: :desc}).each do |page| %>
     <li><%= link_to page.title, page.path %></li>
   <%- end %>
 </ul>
