--- a/app/assets/stylesheets/type_station/base.css.scss
+++ b/app/assets/stylesheets/type_station/base.css.scss
@@ -80,14 +80,14 @@ bottom: auto;
 left: auto;
 }
 
-.ts-move-up-button {
+.ts-move-up-button, .ts-move-down-button-invert {
 top: 0px;
 right: 120px;
 bottom: auto;
 left: auto;
 }
 
-.ts-move-down-button {
+.ts-move-down-button, .ts-move-up-button-invert {
 top: 0px;
 right: 80px;
 bottom: auto;
